Specify the height and overflow-y on l10n-client translation element. fixes ticket #899.

--- a/modules/gallery/css/l10n_client.css
+++ b/modules/gallery/css/l10n_client.css
@@ -184,7 +184,9 @@
 }
 
 #l10n-client-string-editor .translation {
-  overflow:hidden;
+  overflow-y:auto;
+  overflow-x: hidden;
+  height: 20em;
   width:49%;
   float: right;
 }
